temperature converter named and basic lay out of labels

--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
     <title>Document</title>
   </head>
   <body>
+    <h1>Unit Converter</h1>
+    <div>
+      <label for="degC" class="screen-reader-text">°C</label>
+      <input type="number" id="degC" placeholder="°C" />
+      <label for="degF" class="screen-reader-text">°F</label>
+      <input type="number" id="degF" placeholder="°F" />
+    </div>
+
     <script src="./scripts.js" type="module"></script>
   </body>
 </html>
